# Multimodal-Retrieval

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  categories.json  pyproject.toml
benchmarks/: benchmarks.ipynb  get_emb.py  get_indexes.py  xq.py
end2end_proj/backend/: .env  main.py  my_config.py
end2end_proj/backend/migrations/: env.py
end2end_proj/backend/migrations/versions/: 3a345c210c9d_.py  4d32aadfe444_.py  4fd2dfd73f76_.py  8e4d0d7fbc90_.py  9df48b28986a_.py  9fddd2d757b9_.py  a1529c22639d_.py  a6a29dfd7913_.py  cea9265946d0_.py
end2end_proj/backend/src/models/: crud.py  database.py  models.py
end2end_proj/backend/src/routs/: routs.py
end2end_proj/backend/src/schemas/: schemas.py
end2end_proj/backend/src/security/: security.py
end2end_proj/backend/tests/: test1.py
end2end_proj/frontend/: package.json
end2end_proj/frontend/public/: index.html
end2end_proj/frontend/src/: API.js  App.css  App.js
end2end_proj/frontend/src/compoents/: Fileform.js  index.js
end2end_proj/frontend/src/pages/: index.js  login.js  retrival.js  signup.js
metricCalc/: metrics.ipynb  metrics_calc.py
retrieval/: createIndex.py  demo.py  getEmbeddings.py  imgAndCtgDataset.py  utils.py
train/: arguments.py  data.py  main.py  train.py  utils.py
uml/: Диагра Последовательности для FindImageByImage.drawio  Диагра Последовательности для FindImageByText.drawio  Диагра Последовательности для FindTextByImage.drawio  Диаграма классов для Инпрака.drawio
